# soma-zero

./: .gitignore  LICENSE  README.md
adapters/: README.md
adapters/anima/: README.md
control/: README.md
docs/: architecture.md
interface/: README.md
perception/: README.md
sim/gazebo-chess/: .gitignore  README.md  arm_controller.py  awi_mcp.py  board_texture.py  config.py  geometry.py  grasp_pose.py  gz_bot.py  models.py  pyproject.toml  referee.py  render.py  server.py  spawn.py  vision.py  world.py
sim/gazebo-chess/models/meshes/: LICENSE  SOURCE.md  b.stl  k.stl  manifest.json  n.stl  p.stl  q.stl  r.stl
sim/gazebo-chess/scripts/: _grasp_debug.py  _probe_grasp.py  _probe_reach.py  _tune_camera.py  gen_dataset.py  reach_map.py  start_camera_bridge.sh  test_awi.py  test_board_texture.py  test_pick_place.py  test_vision.py
sim/gazebo-chess/tests/: test_gz_referee.py
sim/gazebo-chess/web/: index.html
